Changes in version: JM_1.0-0

  * This is the version of the package related to the book: Rizopoulos, D. (2012). Joint 
    Models for Longitudinal and Time-to-Event Data: with Applications in R. 
    Boca Raton: Chapman & Hall/CRC.

  * functions dns(), dbs(), ins() and ibs() calculate numerically derivative and integrals for functions
    ns() and bs(), respectively.

  * a coef() method has been added for objects of class 'summary.jointModel'.
   

==============================

Changes in version: JM_0.9-2

  * prediction.jointModel() can also compute now prediction intervals.

  * rocJM() has a new logical argument 'directionSmaller' denoting whether smaller
    values for the longitudinal outcome are associated with higher risk for an event.
  
  * fitted.jointModel() has the new option 'Slope' for the 'type' argument that returns
    the fitted values corresponding to the slope term when 
    parameterization %in% c('slope', 'both') in jointModel().
  

==============================

Changes in version: JM_0.9-1

  * minor bug fixes.
  

==============================

Changes in version: JM_0.9-0

  * jointModel() can now also handle exogenous time-dependent covariates when 
    method = "spline-PH-aGH".

  * jointModel() can now also handle competing risks settings when method = "spline-PH-aGH".

  * new function crLong() expands a data frame in the long format in the competing 
    risks setting.

  * predict() method now calculates marginal and subject-specific predictions for the 
    longitudinal outcome.
  

==============================

Changes in version: JM_0.8-4

  * method ranef() has now the extra argument 'type' the specifies whether to compute
    the mean (default) or the mode of the posterior distribution of the random effects.

  * the anova() method now also produces marginal Wald tests when a single joint model
    is provided.

  * plot.survfitJM() produces a more informative plot when argument 'include.y' is set to
    TRUE.
