@@ -1,3 +1,13 @@
+Changes in version: JM_1.0-1
+
+  * use of globalVariables() in source code.
+
+  * a small bug has been corrected in the plot() method for 'jointModel' objects, when
+    a random intercepts linear mixed model was used
+   
+
+==============================
+
 Changes in version: JM_1.0-0
 
   * This is the version of the package related to the book: Rizopoulos, D. (2012). Joint 
